<?xml version="1.0"?>
<package>
  <name>behavior_common</name>
  <version>0.0.1</version>
  <description>The robot behavior common library, implementing the behavior runtime and plugin architecture.</description>
  <maintainer email="matt@tecnovelty.com">Matt Curfman</maintainer>
  <license>Apache-2</license>
  <author>Matt Curfman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>

</package>
